###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "aspect_rules_esbuild", version = "0.18.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.5.3")
